# election_analysis

./: Makefile  README.md  pyproject.toml
chroma_db_RN/: chroma.sqlite3
chroma_db_Ren/: chroma.sqlite3
chroma_db_nFP/: chroma.sqlite3
election_analysis/: chat_app.py  graph_init.py
election_analysis/doc_preparation/: create_vectdb.py
election_analysis/llm_chains/: build_chain.py  create_chain.py  router.py
notebooks/: election_analysis.ipynb
prompts/: criticer_prompt.yaml  generate_prompt.yaml  grader_prompt.yaml  q_rewrite_rag_prompt.yaml  q_rewrite_websearch_prompt.yaml  resume_prompt.yaml  resume_websearch_prompt.yaml
