[tool.poetry]
name = "election-analysis"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
langchain = "^0.2.5"
langgraph = "^0.0.69"
tavily-python = "^0.3.3"
ollama = "^0.2.1"
ipykernel = "^6.29.4"
langchain-community = "^0.2.5"
chromadb = "^0.5.3"
sentence-transformers = "^3.0.1"
langchain-chroma = "^0.1.1"
pypdf = "^4.2.0"
duckduckgo-search = "^6.1.7"
langchain-nomic = "^0.1.2"
nomic = {extras = ["local"], version = "^3.0.33"}
streamlit = "^1.36.0"
watchdog = "^4.0.1"
langchain-huggingface = "^0.0.3"
playwright = "^1.44.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
